# solana_analytics

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md  docker-compose.yml
.cursor/rules/: projrules.mdc  struct.mdc
config/: local.toml
examples/: Cargo.toml  advanced_usage.rs  basic_usage.rs  config.toml  load_balancing.rs
src/: lib.rs
src/config/: mod.rs
src/core/: config.rs  error.rs  indexer.rs  logging.rs  mod.rs  test_utils.rs  traits.rs  utils.rs
src/db/: mod.rs  models.rs
src/db/migrations/: 20240101000000_initial_schema.sql  mod.rs  tests.rs
src/error/: mod.rs
src/fetcher/: transaction_fetcher.rs
src/health/: mod.rs  tests.rs
src/models/: governance.rs  governance_vote.rs  mod.rs  price.rs  price_data.rs  protocol.rs  protocol_interaction.rs  solana_transaction.rs  token.rs  token_account.rs  transaction.rs
src/rpc/: client.rs  config.rs  error.rs  health.rs  mod.rs  rate_limit.rs  tests.rs
src/utils/: mod.rs
tests/: rpc_client.rs
tests/fixtures/: mod.rs
