[package]
name = "solana-rpc-client"
version = "0.1.0"
edition = "2021"
description = "A robust Solana RPC client with connection pooling, retry logic, and health monitoring"
license = "MIT"

[dependencies]
solana-client = "=1.17.0"
solana-sdk = "=1.17.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.28", features = ["full"] }
tokio-retry = "0.3"
governor = "0.6"
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
cached = "0.34"
wiremock = "0.5"
mockall = "0.11"
anyhow = "1.0"
chrono = "0.4"
url = "2.4"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
nonempty = "0.8"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool = "0.9"
deadpool-postgres = { version = "0.10", features = ["rt_tokio_1"] }
postgres-types = { version = "0.2", features = ["derive", "with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
uuid = { version = "1.4", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
mockall = "0.11"
test-log = "0.2"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "advanced_usage"
path = "examples/advanced_usage.rs"
