[package]
name = "solana-rpc-client"
version = "0.1.0"
edition = "2021"
description = "A high-performance, feature-rich Solana RPC client with analytics capabilities"
license = "MIT"

[dependencies]
solana-client = { version = "1.18", optional = true }
solana-sdk = { version = "1.18", optional = true }
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
deadpool-postgres = { version = "0.14.1", features = ["rt_tokio_1", "serde"] }
url = { version = "2.5", features = ["serde"] }
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"
metrics = "0.21"
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.7", features = ["v4", "serde"] }
tokio-retry = "0.3"
governor = "0.6"
config = "0.13"
solana-transaction-status = "1.18.26"
nonzero_ext = "0.3.0"

[features]
default = ["phase1"]
phase1 = ["solana-client", "solana-sdk", "reqwest"]

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.5"
test-log = "0.2"
pretty_assertions = "1.4"
criterion = "0.5"
tempfile = "3.8"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "advanced_usage"
path = "examples/advanced_usage.rs"
